Fix horizontal overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,7 +26,7 @@
   html,
   body,
   [data-reactroot] {
-    @apply min-h-screen;
+    @apply min-h-screen max-w-full overflow-x-hidden;
   }
 
   body {
